# gallows

./: .gitignore  Makefile  README.md  pyproject.toml
gallows/database/: display_hangman.py  list_of_used_words.py
gallows/game/: gallows_game.py  game_functionality.py
gallows/scripts/: gallows_scripts.py
